Fixed horizontal scrolling on class results table.

--- a/fitness_scoring/static/css/site_styles.css
+++ b/fitness_scoring/static/css/site_styles.css
@@ -23,3 +23,7 @@ select {
 }
 
 ul {list-style:none}
+
+#results_div {
+    overflow: auto;
+}
